--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!--about user-->
 				<div class="about">
 					<h2 class="about-positiun">Front-End Developer</h2>
-					<h1 class="about-name">Polozov Nikita</h1>
+					<h1 class="about-name">Polozov NikitA</h1>
 					<p class="about-destriction">
 						After ten years of working in the restaurants and cocktail bars, I have been decided to learn IT-technologis. I got acquainted with all directions of IT, and chose Front-end. It's more interesting for me.
 					</p>
