--- a/index.html
+++ b/index.html
@@ -26,14 +26,29 @@
 				<!--Project-->
 				<div class="projects">
 					<h3 class="title">
-            Projects 
+            Refresher Courses 
           </h3>
 					<ol class="project-list">
 						<li class="project-item">
 							<span class="project">
 								<a href="https://goit.ua/" class="project-link">https://goit.ua/</a>
 							..........
-							<span class="project-bracket">[</span> HTML, CSS </span><span class="project-bracket">]</span>
+							<span class="project-bracket">[</span> HTML5, CSS, JavaScript </span><span class="project-bracket">]</span>
+							</span>
+						</li>
+						<li class="project-item">
+							<span class="project">
+								<a href="http://parovoz.bar/ru/shkola-miksologii/" class="project-link">Parovoz Course</a>
+							........
+							<span class="project-bracket">[</span> Bar Manager </span><span class="project-bracket">]</span>
+							</span>
+						</li>
+						<li class="project-item">
+							<span class="project">
+								<a href="https://www.amusatov.com/" class="project-link">Bar Management
+</a>
+							......
+							<span class="project-bracket">[</span> Bar Manager </span><span class="project-bracket">]</span>
 							</span>
 
 						</ol>
@@ -61,7 +76,7 @@
 					<!--Company 2-->
 					<div>
 						<h4 class="position-work">Bartender Manager <span class="organazation">ZWEIG Bar and restorane</span></h4>
-						<p class="period">February 2020 - May 2021 <span class="line">|</span> Country</p>
+						<p class="period">February 2020 - May 2021 <span class="line">|</span>Kiev</p>
             <ul class="work-list">
 						<li class="work-list-item">
 							standardization
@@ -73,9 +88,8 @@
             </ul>
 					</div>
 					<!--Company 3-->
-					<div></div>
 					<h4 class="position-work">Bartender Manager <span class="organazation">Podil East India Company cocktail bar</span></h4>
-					<p class="period">December 2016 - September 2019 <span class="line">|</span> Country</p>
+					<p class="period">December 2016 - September 2019 <span class="line">|</span> Kiev</p>
 					<ul class="work-list">
 					<li class="work-list-item">
 						standardization
@@ -125,7 +139,9 @@
 					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Cocktails</span></li>
 					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Spirit Drinks</span></li>
 					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Coffee</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Manager</span></li>
+					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Standardization </span></li>
+					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Budgeting and cost control</span></li>
+					<li class="tech-skills-icon"> <span class="tech-skills-tegs">PR and marketing</span></li>
 					</ul>
 				</div>
 				<!--Soft Skills-->
