--- a/index.html
+++ b/index.html
@@ -1,160 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="Styles/styles.css" />
-		<title>Resume</title>
-	</head>
-	<body style="background-color:powderblue;">
-		<!--Main-->
-		<div class="main">
-			<!--Main Content-->
-			<div class="main-content">
-				<!--about user-->
-				<div class="about">
-					<h2 class="about-positiun">Front-End Developer</h2>
-					<h1 class="about-name">Polozov NikitA</h1>
-					<p class="about-destriction">
-						After ten years of working in the restaurants and cocktail bars, I have been decided to learn IT-technologis. I got acquainted with all directions of IT, and chose Front-end. It's more interesting for me.
-					</p>
-				</div>
-				<!--Project-->
-				<div class="projects">
-					<h3 class="title">
-            Refresher Courses 
-          </h3>
-					<ol class="project-list">
-						<li class="project-item">
-							<span class="project">
-								<a href="https://goit.ua/" class="project-link">https://goit.ua/</a>
-							..........
-							<span class="project-bracket">[</span> HTML5, CSS, JavaScript </span><span class="project-bracket">]</span>
-							</span>
-						</li>
-						<li class="project-item">
-							<span class="project">
-								<a href="http://parovoz.bar/ru/shkola-miksologii/" class="project-link">Parovoz Course</a>
-							........
-							<span class="project-bracket">[</span> Bar Manager </span><span class="project-bracket">]</span>
-							</span>
-						</li>
-						<li class="project-item">
-							<span class="project">
-								<a href="https://www.amusatov.com/" class="project-link">Bar Management
-</a>
-							......
-							<span class="project-bracket">[</span> Bar Manager </span><span class="project-bracket">]</span>
-							</span>
-
-						</ol>
-				</div>
-				<!--Work-->
-				<div class="work">
-					<h3 class="title">Work Experience</h3>
-					<!--Company 1-->
-					<div>
-						<h4 class="position-work">Bartender Manager <span class="organazation">NB Cocktails Bar</span></h4>
-						<p class="period">September 2021 - up to now <span class="line">|</span>Kiev</p>
-						<ul class="work-list">
-						<li class="work-list-item">standardization
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Styles/styles.css" />
+    <title>Resume</title>
+  </head>
+  <body style="background-color: powderblue">
+    <!--Main-->
+    <div class="main">
+      <!--Main Content-->
+      <div class="main-content">
+        <!--about user-->
+        <div class="about">
+          <h2 class="about-positiun">Bartender Manager</h2>
+          <h1 class="about-name">Polozov NikitA</h1>
+          <p class="about-destriction">
+            After ten years of working in the restaurants and cocktail bars, I
+            have been decided to learn IT-technologis. I got acquainted with all
+            directions of IT, and chose Front-end. It's more interesting for me.
+          </p>
+        </div>
+        <!--Project-->
+        <div class="projects">
+          <h3 class="title">Refresher Courses</h3>
+          <ol class="project-list">
+            <li class="project-item">
+              <span class="project">
+                <a href="https://goit.ua/" class="project-link"
+                  >https://goit.ua/</a
+                >
+                ..........
+                <span class="project-bracket">[</span> HTML5, CSS, JavaScript </span
+              ><span class="project-bracket">]</span>
             </li>
-						<li class="work-list-item">
-							managed a team of five bartenders
+            <li class="project-item">
+              <span class="project">
+                <a
+                  href="http://parovoz.bar/ru/shkola-miksologii/"
+                  class="project-link"
+                  >Parovoz Course</a
+                >
+                ........
+                <span class="project-bracket">[</span> Bar Manager </span
+              ><span class="project-bracket">]</span>
             </li>
-						<li class="work-list-item">
-							cocktail card development and updating the alcohol list
+            <li class="project-item">
+              <span class="project">
+                <a href="https://www.amusatov.com/" class="project-link"
+                  >Bar Management
+                </a>
+                ......
+                <span class="project-bracket">[</span> Bar Manager </span
+              ><span class="project-bracket">]</span>
             </li>
-						<li class="work-list-item">
-							documentation, reports and inventory</li>
-						</ul>	
-					</div>
-					<!--Company 2-->
-					<div>
-						<h4 class="position-work">Bartender Manager <span class="organazation">ZWEIG Bar and restorane</span></h4>
-						<p class="period">February 2020 - May 2021 <span class="line">|</span>Kiev</p>
+          </ol>
+        </div>
+        <!--Work-->
+        <div class="work">
+          <h3 class="title">Work Experience</h3>
+          <!--Company 1-->
+          <div>
+            <h4 class="position-work">
+              Bartender Manager
+              <span class="organazation">NB Cocktails Bar</span>
+            </h4>
+            <p class="period">
+              September 2021 - up to now <span class="line">|</span>Kiev
+            </p>
             <ul class="work-list">
-						<li class="work-list-item">
-							standardization
-						</li>
-						<li class="work-list-item">managed a team of four bartenders</li>
-						<li class="work-list-item">cocktail card development and updating the alcohol and wine list</li>
-						<li class="work-list-item">
-							documentation, reports and inventory</li>
+              <li class="work-list-item">standardization</li>
+              <li class="work-list-item">managed a team of five bartenders</li>
+              <li class="work-list-item">
+                cocktail card development and updating the alcohol list
+              </li>
+              <li class="work-list-item">
+                documentation, reports and inventory
+              </li>
             </ul>
-					</div>
-					<!--Company 3-->
-					<h4 class="position-work">Bartender Manager <span class="organazation">Podil East India Company cocktail bar</span></h4>
-					<p class="period">December 2016 - September 2019 <span class="line">|</span> Kiev</p>
-					<ul class="work-list">
-					<li class="work-list-item">
-						standardization
-        </li>
-					<li class="work-list-item">
-						managed a team of four bartenders
-        </li>
-					<li class="work-list-item">
-						cocktail card development and updating the alcohol list
-         </li>
-		            <li class="work-list-item">
-							documentation, reports and inventory</li>
-		         </ul>
-				</div>
-				<!--Education-->
-				<div class="education">
-					<h3 class="title">Education</h3>
-					<h4 class="edication-name">Kiev National University of Economy</h4>
-					<p class="profi">Manager</p>
-					<p class="period">September 2007 - June 2012<span class="line">|</span>Kiev</p>
-				</div>
-			</div>
-			<!--Sidebar-->
-			<aside class="sidebar">
-				<img src="img/imgonline-com-ua-Resize-ulRCmPG6uXlt.jpg" alt="user photo" class="photo"/>
-				<!--Contact-->
-				<div class="contacts">
-					<h3 class="sidebar-tittle">Contact</h3>
-					<div>
-						<p>
-							<spam class="contact-teg">C:</spam>
-							<a href="tel:+380634343010" class="contact-link">+380634343010</a>
-						</p>
-						<p>
-							<spam class="contact-teg">E:</spam>
-							<a href="mailto:npolozov0@gmail.com" class="contact-link">npolozov0@gmail.com</a>
-						</p>
-					</div>
-				</div>
-				<!--Tech Skills-->
-				<div class="tech-skills">
-					<h3 class="sidebar-tittle">Tech Skills</h3>
-					<ul class="tech-skills-list">
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">HTML</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">CSS</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Wine</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Cocktails</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Spirit Drinks</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Coffee</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Standardization </span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">Budgeting and cost control</span></li>
-					<li class="tech-skills-icon"> <span class="tech-skills-tegs">PR and marketing</span></li>
-					</ul>
-				</div>
-				<!--Soft Skills-->
-				<div class="soft-skills">
-					<h3 class="sidebar-tittle">Soft Skils</h3>
-					<ul class="soft-skils-list">
-					<li class="soft-skilld-icon"><span class="soft-skills-tegs">Stress Resistant</span></li>
-					<li class="soft-skilld-icon"><span class="soft-skills-tegs">Communicative
-</span></li>
-					<li class="soft-skilld-icon"><span class="soft-skills-tegs">Teamwork</span></li>
-					</ul>
-				</div>
-			</aside>
-		</div>
-	</body>
+          </div>
+          <!--Company 2-->
+          <div>
+            <h4 class="position-work">
+              Bartender Manager
+              <span class="organazation">ZWEIG Bar and restorane</span>
+            </h4>
+            <p class="period">
+              February 2020 - May 2021 <span class="line">|</span>Kiev
+            </p>
+            <ul class="work-list">
+              <li class="work-list-item">standardization</li>
+              <li class="work-list-item">managed a team of four bartenders</li>
+              <li class="work-list-item">
+                cocktail card development and updating the alcohol and wine list
+              </li>
+              <li class="work-list-item">
+                documentation, reports and inventory
+              </li>
+            </ul>
+          </div>
+          <!--Company 3-->
+          <h4 class="position-work">
+            Bartender Manager
+            <span class="organazation"
+              >Podil East India Company cocktail bar</span
+            >
+          </h4>
+          <p class="period">
+            December 2016 - September 2019 <span class="line">|</span> Kiev
+          </p>
+          <ul class="work-list">
+            <li class="work-list-item">standardization</li>
+            <li class="work-list-item">managed a team of four bartenders</li>
+            <li class="work-list-item">
+              cocktail card development and updating the alcohol list
+            </li>
+            <li class="work-list-item">documentation, reports and inventory</li>
+          </ul>
+        </div>
+        <!--Education-->
+        <div class="education">
+          <h3 class="title">Education</h3>
+          <h4 class="edication-name">Kiev National University of Economy</h4>
+          <p class="profi">Manager</p>
+          <p class="period">
+            September 2007 - June 2012<span class="line">|</span>Kiev
+          </p>
+        </div>
+      </div>
+      <!--Sidebar-->
+      <aside class="sidebar">
+        <img
+          src="img/imgonline-com-ua-Resize-ulRCmPG6uXlt.jpg"
+          alt="user photo"
+          class="photo"
+        />
+        <!--Contact-->
+        <div class="contacts">
+          <h3 class="sidebar-tittle">Contact</h3>
+          <div>
+            <p>
+              <span class="contact-teg">C:</span>
+              <a href="tel:+380634343010" class="contact-link">+380634343010</a>
+            </p>
+            <p>
+              <span class="contact-teg">E:</span>
+              <a href="mailto:npolozov0@gmail.com" class="contact-link"
+                >npolozov0@gmail.com</a
+              >
+            </p>
+          </div>
+        </div>
+        <!--Tech Skills-->
+        <div class="tech-skills">
+          <h3 class="sidebar-tittle">Tech Skills</h3>
+          <ul class="tech-skills-list">
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">HTML</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">CSS</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">Wine</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">Cocktails</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">Spirit Drinks</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">Coffee</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">Standardization </span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">Budgeting and cost control</span>
+            </li>
+            <li class="tech-skills-icon">
+              <span class="tech-skills-tegs">PR and marketing</span>
+            </li>
+          </ul>
+        </div>
+        <!--Soft Skills-->
+        <div class="soft-skills">
+          <h3 class="sidebar-tittle">Soft Skils</h3>
+          <ul class="soft-skils-list">
+            <li class="soft-skilld-icon">
+              <span class="soft-skills-tegs">Stress Resistant</span>
+            </li>
+            <li class="soft-skilld-icon">
+              <span class="soft-skills-tegs">Communicative </span>
+            </li>
+            <li class="soft-skilld-icon">
+              <span class="soft-skills-tegs">Teamwork</span>
+            </li>
+          </ul>
+        </div>
+      </aside>
+    </div>
+  </body>
 </html>
