--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="Styles/styles.css" />
     <title>Resume</title>
   </head>
-  <body style="background-color: powderblue">
+  <body>
     <!--Main-->
     <div class="main">
       <!--Main Content-->
